--- a/result-search.html
+++ b/result-search.html
@@ -31,7 +31,7 @@
               <div
                 class="nav-middle w-100 d-flex align-items-center justify-content-center gap-4"
               >
-                <div class="nav-catalog d-flex align-items-center gap-2">
+                <div class="nav-catalog  d-none d-sm-flex  align-items-center gap-2">
                   <button id="navbar_btn" class="">
                     <i class="uil uil-bars"></i>
                   </button>
