--- a/basket.html
+++ b/basket.html
@@ -31,7 +31,9 @@
 							<div
 								class="nav-middle w-100 d-flex align-items-center justify-content-center gap-4"
 							>
-								<div class="nav-catalog  d-none d-sm-flex  align-items-center gap-2">
+								<div
+									class="nav-catalog d-none d-sm-flex align-items-center gap-2"
+								>
 									<button id="navbar_btn" class="">
 										<i class="uil uil-bars"></i>
 									</button>
@@ -256,10 +258,13 @@
 						<img src="images/bottom-heart.svg" alt="" />
 						Избранное
 					</a>
-					<button class="d-flex flex-column align-items-center">
+					<a
+						href="result-search.html"
+						class="d-flex flex-column align-items-center"
+					>
 						<img src="images/bottom-box.svg" alt="" />
 						Продукты
-					</button>
+					</a>
 					<a href="basket.html" class="d-flex flex-column align-items-center">
 						<img src="images/bottom-cart.svg" alt="" />
 						Корзина
