--- a/catalog.html
+++ b/catalog.html
@@ -235,10 +235,13 @@
 						<img src="images/bottom-heart.svg" alt="" />
 						Избранное
 					</a>
-					<button class="d-flex flex-column align-items-center">
+					<a
+						href="result-search.html"
+						class="d-flex flex-column align-items-center"
+					>
 						<img src="images/bottom-box.svg" alt="" />
 						Продукты
-					</button>
+					</a>
 					<a href="basket.html" class="d-flex flex-column align-items-center">
 						<img src="images/bottom-cart.svg" alt="" />
 						Корзина
